--- a/.github/workflows/maven-feature.yml
+++ b/.github/workflows/maven-feature.yml
@@ -18,8 +18,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
-      - name: Maven Package
+      - name: Maven Clean Package
         run: mvn -B clean package -DskipTests
-      - name: Maven Verify
+      - name: Maven Clean Verify
         run: mvn -B clean verify
 
