--- a/.github/workflows/maven-master.yml
+++ b/.github/workflows/maven-master.yml
@@ -17,9 +17,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11.0.4
-      - name: Maven Package
+      - name: Maven Clean Package
         run: mvn -B clean package -DskipTests
-      - name: Maven Verify
+      - name: Maven Clean Verify
         run: mvn -B clean verify -Pintegration-test
 
   sonar:
@@ -64,9 +64,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
+        run: docker login -u ${{ secrets.DOCKER_USER }} -p "${{ secrets.DOCKER_PASS }}"
       - name: Build Docker image
-        run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
+        run: docker build -t ${{ secrets.DOCKER_USER }}:$REPO -t ${{ secrets.DOCKER_USER }}:${GITHUB_SHA::8} .
       - name: Publish Docker image
-        run: docker push $REPO
+        run: docker push ${{ secrets.DOCKER_USER }}
 
