--- a/.github/workflows/maven-feature.yml
+++ b/.github/workflows/maven-feature.yml
@@ -6,14 +6,19 @@ on:
       - 'master'
       - 'release*'
 
+  pull_request:
+    types: [opened, synchronize, reopened]
+
 jobs:
 
   test:
     name: Unit Test
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v1
+        with:
+          fetch-depth: 0
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
