--- a/.github/workflows/maven-master.yml
+++ b/.github/workflows/maven-master.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: 'zulu'
       - name: Maven Clean Package
         run: mvn -B clean package -DskipTests
       - name: Maven Clean Verify
@@ -36,6 +37,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: 'zulu'
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
@@ -71,6 +73,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: 'zulu'
       - name: Publish artifact on GitHub Packages
         run: mvn -B clean deploy -DskipTests
         env:
