--- a/.github/workflows/maven-master.yml
+++ b/.github/workflows/maven-master.yml
@@ -15,11 +15,11 @@ jobs:
       - uses: actions/checkout@v1
         with:
           fetch-depth: 0
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
         with:
-          java-version: 17
-          distribution: 'zulu'
+          java-version: 11.0.4
+          # distribution: 'zulu'
       - name: Maven Clean Package
         run: mvn -B clean package -DskipTests
       - name: Maven Clean Verify
@@ -33,11 +33,11 @@ jobs:
       - uses: actions/checkout@v1
         with:
           fetch-depth: 0
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
         with:
-          java-version: 17
-          distribution: 'zulu'
+          java-version: 11.0.4
+          # distribution: 'zulu'
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
@@ -54,11 +54,11 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
       - name: SonarCloud Scan
-        run:  mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=christopher-ogbunuzor_Java-Maven-NoticeBoard
-        # run: mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+        # run:  mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=christopher-ogbunuzor_Java-Maven-NoticeBoard
+        run: mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          # SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           
   artifact:
     name: Publish - GitHub Packages
@@ -69,11 +69,11 @@ jobs:
       - uses: actions/checkout@v1
         with:
           fetch-depth: 0
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
         with:
-          java-version: 17
-          distribution: 'zulu'
+          java-version: 11.0.4
+          # distribution: 'zulu'
       - name: Publish artifact on GitHub Packages
         run: mvn -B clean deploy -DskipTests
         env:
