--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,7 @@
 				<sonar.sources>.</sonar.sources>
 				<sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
 				<sonar.exclusions>${code.coverage.exclusions}</sonar.exclusions>
-				<!-- <sonar.projectKey>wkrzywiec_NoticeBoard</sonar.projectKey> -->
+				<sonar.projectKey>christopher-ogbunuzor_Java-Maven-NoticeBoard</sonar.projectKey>
 				<sonar.organization>christopher-ogbunuzor</sonar.organization>
 				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 			</properties>
