--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
 		<java.version>11</java.version>
 		<org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
 		<org.projectlombok.version>1.18.10</org.projectlombok.version>
-		<code.coverage.exclusions>
+		<!-- <code.coverage.exclusions>
 			**/com/wkrzywiec/medium/noticeboard/controller/dto/**,
 			**/com/wkrzywiec/medium/noticeboard/entity/**,
 			**/com/wkrzywiec/medium/noticeboard/Application.java
-		</code.coverage.exclusions>
+		</code.coverage.exclusions> -->
 	</properties>
 
 	<dependencies>
@@ -229,7 +229,7 @@
 			<properties>
 				<sonar.sources>.</sonar.sources>
 				<sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
-				<sonar.exclusions>${code.coverage.exclusions}</sonar.exclusions>
+				<!-- <sonar.exclusions>${code.coverage.exclusions}</sonar.exclusions> -->
 				<sonar.projectKey>christopher-ogbunuzor_Java-Maven-NoticeBoard</sonar.projectKey>
 				<sonar.organization>christopher-ogbunuzor</sonar.organization>
 				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -261,7 +261,7 @@
 		<repository>
 			<id>github</id>
 			<name>NoticeBoard Simple CRUD application</name>
-			<url>https://maven.pkg.github.com/christopher-ogbunuzor/NoticeBoard</url>
+			<url>https://maven.pkg.github.com/christopher-ogbunuzor/Java-Maven-NoticeBoard</url>
 		</repository>
 	</distributionManagement>
 
